# repro-bazel-cc-toolchain-starlark-paths

./: README.md
consumer/: .bazelrc  BUILD.bazel  WORKSPACE
toolchain/: BUILD.bazel
